test/main/com/ocaml/sdk/output/errors/samples/type/no_else.ml
(*
Error: This expression has type int but an expression was expected of type unit because it is in the result of a conditional with no else branch
*)
if true then 3;;